@@ -1,2 +1,4 @@
+* Calculate redeemed commissions based on contract rather than option
+
 Version 1.4 - 2015-05-29
 * Module Creation
